--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,7 @@ PORT = 3008
 # DB_PASSWORD: Senha do banco de banco de dados. Ex: 'root'
 # DB_DATABASE: Nome da base de dados criada. Ex: 'sistema_login'
 
-DB_HOST = 'localhost'
+DB_HOST = '127.0.0.1'
 DB_USER = 'root'
-DB_PASSWORD = 'root'
+DB_PASSWORD = 'giovanni2004'
 DB_DATABASE = 'sistema_login'
