--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,6 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.2",
-    "nodemon": "^3.0.1",
-    "postman": "^0.2.0"
+    "nodemon": "^3.0.1"
   }
 }
