--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,5 @@ PORT = 3008
 
 DB_HOST = '127.0.0.1'
 DB_USER = 'root'
-DB_PASSWORD = 'giovanni2004'
+DB_PASSWORD = 'root'
 DB_DATABASE = 'GameSense'
